templates/www/021-redirector-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: redirector
  name: redirector
  namespace: www
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: redirector
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redirector
    spec:
      containers:
      - name: redirector
        image: mazdermind/redirector:latest
